# gbzadmin3

./: .gitignore  AUTHORS  ChangeLog  Makefile  Makefile.am  Makefile.in  PKGBUILD  README.md  aclocal.m4  config.h  config.h.in  config.status  configure  configure.ac  gbzadmin.desktop  gbzadmin3-2.4.2-1-x86_64.pkg.tar.xz  gbzadmin3-2.4.2-2-x86_64.pkg.tar.xz  gbzadmin3-bak.glade  gbzadmin3-old.glade  gbzadmin3.glade  gbzadmin3.xml  parsedefaults.pl
autom4te.cache/: output.0  output.1  requests  traces.0  traces.1
misc/: common.h.orig  configfile.cxx  configfile.cxx.orig  configfile.h  configfile.h.orig  default_vars.h.orig  gListServer.cxx.orig  gListServer.h.orig  gSocket.cxx.orig  game_stat_view.cxx.orig  gbzadmin.cxx.orig  gbzadmin.h.orig  main.cxx.orig  msg_view.cxx.orig  parser.h.orig  player_view.cxx.orig  player_view.h.orig  players.cxx.orig  server_vars_view.cxx.orig  server_vars_view.h.orig  serverlist_view.cxx.orig  serverlist_view.h.orig  sound.cxx  sound.h  utilities.h.orig  view.h.orig
po/: Makefile  Makefile.in  POTFILES  POTFILES.in
src/: Makefile  Makefile.am  Makefile.in  cmdLine.cxx  cmdLine.h  common.h  default_vars.h  gIOSocket.cxx  gIOSocket.h  gListServer.cxx  gListServer.h  gSocket.cxx  gSocket.cxx.bak  gSocket.h  gSocket.h.bak  game_stat_view.cxx  game_stat_view.h  gbzadmin.cxx  gbzadmin.cxx.orig  gbzadmin.h  gbzadmin3  main.cxx  msg_view.cxx  msg_view.h  parser.cxx  parser.h  player_view.cxx  player_view.h  players.cxx  players.h  server_vars_view.cxx  server_vars_view.h  serverlist_view.cxx  serverlist_view.h  socketStates.h  tags  utilities.cxx  utilities.h  view.cxx  view.h
src/.deps/: cmdLine.Po  gListServer.Po  gSocket.Po  game_stat_view.Po  gbzadmin.Po  main.Po  msg_view.Po  parser.Po  player_view.Po  players.Po  server_vars_view.Po  serverlist_view.Po  utilities.Po  view.Po
